--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@upstash/qstash": "^0.1.7",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
