--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "7.32.0",
-    "eslint-config-next": "13.0.0"
+    "eslint-config-next": "13.0.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.2.2"
   }
 }
