--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "13.0.0",
     "openai": "^3.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
