--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@upstash/qstash": "^0.1.7",
     "@upstash/redis": "^1.16.0",
+    "classnames": "^2.3.2",
     "next": "13.0.0",
     "openai": "^3.1.0",
     "react": "18.2.0",
