--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "openai": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
