--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@upstash/qstash": "^0.1.7",
     "@upstash/redis": "^1.16.0",
     "classnames": "^2.3.2",
-    "next": "13.0.0",
+    "next": "^13.0.6",
     "openai": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
