--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@upstash/redis": "^1.16.0",
     "@vercel/analytics": "^0.1.7-beta.1",
     "classnames": "^2.3.2",
+    "lru-cache": "^7.14.1",
     "next": "13.0.0",
     "openai": "^3.1.0",
     "react": "18.2.0",
